Fix openconnect-sso install with Nikita's help

--- a/openconnect-sso/config.toml
+++ b/openconnect-sso/config.toml
@@ -1,7 +1,7 @@
 on_disconnect = "~/.ssh/kill-ssh-control-masters.sh"
 
 [default_profile]
-address = "https://ams-vpn-cluster.cisco.com/ssl"
+address = "https://aer01-hda2-vpn-cluster-4.cisco.com/ssl"
 user_group = ""
 name = ""
 
