--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-commonmark==0.9.1
-pydantic==1.10.2
-Pygments==2.13.0
-rich==12.6.0
-typing_extensions==4.4.0
+annotated-types==0.6.0
+markdown-it-py==3.0.0
+mdurl==0.1.2
+pydantic==2.4.2
+pydantic_core==2.10.1
+Pygments==2.16.1
+rich==13.6.0
+typing_extensions==4.8.0
